# coup

./: README.md  pyproject.toml
coup/: __init__.py  coup.py  deck.py  game.py  new.py  new2.py  player.py  runner.py  states.py
tests/: test_coup.py
