[tool.poetry]
name = "coup"
version = "0.1.0"
description = ""
authors = ["baileywickham <baileywickham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
transitions = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
